# node-rust-wasm-lambda

./: .gitignore  .index.mjs.swp  Cargo.toml  README.md  index.mjs  package-lock.json  package.json
src/: bindings.rs  lib.rs
wit/: world.wit
