[package]
name = "node-rust-wasm-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.25.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:node-rust-wasm-lambda"

[package.metadata.component.dependencies]
